==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/GD/GD32VF103/USARTv1/hal_serial_lld.c <==
#include "hal.h"

static void set_error(SerialDriver *sdp, uint16_t stat) {
  eventflags_t sts = 0;

  if (stat & USART_STAT_ORERR)
    sts |= SD_OVERRUN_ERROR;
  if (stat & USART_STAT_PERR)
    sts |= SD_PARITY_ERROR;
  if (stat & USART_STAT_FERR)
    sts |= SD_FRAMING_ERROR;
  if (stat & USART_STAT_NERR)
    sts |= SD_NOISE_ERROR;
  chnAddFlagsI(sdp, sts);
}

void sd_lld_init(void) {

#if GD32_SERIAL_USE_USART0
  sdObjectInit(&SD1, NULL, notify1);
  SD1.usart = USART0;
#endif

#if GD32_SERIAL_USE_USART1
  sdObjectInit(&SD2, NULL, notify2);
  SD2.usart = USART1;
#endif

#if GD32_SERIAL_USE_USART2
  sdObjectInit(&SD3, NULL, notify3);
  SD3.usart = USART2;
#endif

#if GD32_SERIAL_USE_UART3
  sdObjectInit(&SD4, NULL, notify4);
  SD4.usart = UART3;
#endif

#if GD32_SERIAL_USE_UART4
  sdObjectInit(&SD5, NULL, notify5);
  SD5.usart = UART4;
#endif
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config) {

  if (config == NULL)
    config = &default_config;

  if (sdp->state == SD_STOP) {
#if GD32_SERIAL_USE_USART0
    if (&SD1 == sdp) {
      rcuEnableUSART0(true);
      eclicEnableVector(GD32_USART0_NUMBER, GD32_SERIAL_USART0_PRIORITY, GD32_SERIAL_USART0_TRIGGER);
    }
#endif
#if GD32_SERIAL_USE_USART1
    if (&SD2 == sdp) {
      rcuEnableUSART1(true);
      eclicEnableVector(GD32_USART1_NUMBER, GD32_SERIAL_USART1_PRIORITY, GD32_SERIAL_USART1_TRIGGER);
    }
#endif
#if GD32_SERIAL_USE_USART2
    if (&SD3 == sdp) {
      rcuEnableUSART2(true);
      eclicEnableVector(GD32_USART2_NUMBER, GD32_SERIAL_USART2_PRIORITY, GD32_SERIAL_USART2_TRIGGER);
    }
#endif
#if GD32_SERIAL_USE_UART3
    if (&SD4 == sdp) {
      rcuEnableUART3(true);
      eclicEnableVector(GD32_UART3_NUMBER, GD32_SERIAL_UART3_PRIORITY, GD32_SERIAL_UART3_TRIGGER);
    }
#endif
#if GD32_SERIAL_USE_UART4
    if (&SD5 == sdp) {
      rcuEnableUART4(true);
      eclicEnableVector(GD32_UART4_NUMBER, GD32_SERIAL_UART4_PRIORITY, GD32_SERIAL_UART4_TRIGGER);
    }
#endif
  }
  usart_init(sdp, config);
}

void sd_lld_stop(SerialDriver *sdp) {

  if (sdp->state == SD_READY) {
    usart_deinit(sdp->usart);
#if GD32_SERIAL_USE_USART0
    if (&SD1 == sdp) {
      rcuDisableUSART0();
      eclicDisableVector(GD32_USART0_NUMBER);
      return;
    }
#endif
#if GD32_SERIAL_USE_USART1
    if (&SD2 == sdp) {
      rcuDisableUSART1();
      eclicDisableVector(GD32_USART1_NUMBER);
      return;
    }
#endif
#if GD32_SERIAL_USE_USART2
    if (&SD3 == sdp) {
      rcuDisableUSART2();
      eclicDisableVector(GD32_USART2_NUMBER);
      return;
    }
#endif
#if GD32_SERIAL_USE_UART3
    if (&SD4 == sdp) {
      rcuDisableUART3();
      eclicDisableVector(GD32_UART3_NUMBER);
      return;
    }
#endif
#if GD32_SERIAL_USE_UART4
    if (&SD5 == sdp) {
      rcuDisableUART4();
      eclicDisableVector(GD32_UART4_NUMBER);
      return;
    }
#endif
  }
}
